--- a/_config.yml
+++ b/_config.yml
@@ -22,3 +22,4 @@ header_pages:
   - navigation/voteforthegoat/home.md
   - navigation/share_and_care/home.md
   - navigation/rate_and_relate/home.md
+  - navigation/
