--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: DNHS Flocker
+title: Neptune
 description: "Social Media for Del Norte High School"
-owner_name: John Mortensen
+owner_name: Akshaj Gurugubelli
 github_username: nighthawkcoders
 github_repo: "flocker_frontend" 
 baseurl: "/flocker_frontend"
