login verify - nolan

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: Neptune
 description: "Social Media for Del Norte High School"
 owner_name: Akshaj Gurugubelli
 github_username: nighthawkcoders
-github_repo: "flocker_frontend" 
-baseurl: "/flocker_frontend"
+github_repo: "neptune_frontend" 
+baseurl: "/neptune_frontend"
 future: true
 remote_theme: jekyll/minima
 minima:
