--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Neptune
 description: "Social Media for Del Norte High School"
-owner_name: Akshaj Gurugubelli
+owner_name: Akshaj Gurugubelli & Yash Patil
 github_username: nighthawkcoders
 github_repo: "neptune_frontend"
 baseurl: "/neptune_frontend"
 future: true
-remote_theme: jekyll/minima
+remote_theme: jekyll/cayman
 minima:
   skin: dark
 # remote_theme: pages-themes/midnight@v0.2.0
