--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ minima:
 # remote_theme: pages-themes/time-machine@v0.2.0
 plugins:
   - jekyll-remote-theme
-header_pages:
-  - navigation/ai.md
-  - navigation/
+minima:
+  nav_pages:
+    - navigation/ai.md
+    - navigation/
